fixing mobile spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,8 +4,10 @@ body {
 
 .container {
     max-width: 970px;
-    margin-top: 4em;
+    margin-top: 1em;
     margin-bottom: 15em;
+    margin-left: 1em;
+    margin-right: 1.5em;
 }
 
 p, h1, h2, h4, li {
